--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
