--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "typescript": "^5"
+    "typescript": "^5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6"
   }
 }
