--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.76.0",
-    "@types/react-datepicker": "^7.0.0",
     "appwrite": "^17.0.2",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.511.0",
@@ -25,7 +24,7 @@
     "node-appwrite": "^13.0.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-datepicker": "^8.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
@@ -35,10 +34,11 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "typescript": "^5",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5"
   }
 }
